--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
 
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-end-rgb: 235, 235, 235;
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
@@ -87,12 +87,9 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: rgb(51,51,45);
+  font-family: var(--font-mono);
+  height: 100vh;
 }
 
 a {
